# commit0

./: .gitignore  LICENSE  README.md  build.py  get_dataset_stats.py  mkdocs.yml  processing_summary.json  pyproject.core.toml  pyproject.toml  requirements.txt  run.py  test_e2b.py
.github/workflows/: pre-commit.yml  system.yml
agent/: README.md  __main__.py  agent_utils.py  agents.py  class_types.py  cli.py  commit0_utils.py  display.py  run_agent.py  run_agent_joblit.py  run_agent_no_rich.py  run_agent_test.py  team.py
baselines/: README.md  agents.py  baseline_utils.py  class_types.py  commit0_utils.py  run_agent.py  run_aider.py  run_baseline.py  run_unit_test_feedback_baseline.py
baselines/config/: aider.yaml  base.yaml
baselines/configs/: agent.yaml  aider.yaml  base.yaml
baselines/outputs/: predictions.jsonl
collect/: build_dataset.py  inspect_unit_tests.py  remove_repos.py  repos.yml  run_build_dataset.sh  utils.py
commit0/: __init__.py  __main__.py  args.py  args_yaml.py  cli.py
commit0-core/: README.md  pyproject.toml
commit0-core/commit0_core/: __init__.py  cli.py
commit0-core/commit0_core/configs/: config_class.py
commit0-core/commit0_core/harness/: build.py  docker_utils.py  dockerfiles.py  evaluate.py  execution_context.py  get_pytest_ids.py  save.py  setup.py  spec.py  utils.py
commit0/baselines/: run_baseline.py
commit0/collect/: build_dataset.py  inspect_unit_tests.py  pdf_to_text.py  remove_repos.py  run_build_dataset.sh  run_unit_tests.py  scrape_pdf.py  serialize_repo.py  utils.py
commit0/configs/: base.yaml  config_class.py  user.yaml
commit0/data/test_ids/: astropy__astropy-12907#fail_to_pass.bz2  astropy__astropy-12907#pass_to_pass.bz2  astropy__astropy-13033#fail_to_pass.bz2  astropy__astropy-13033#pass_to_pass.bz2  astropy__astropy-13236#fail_to_pass.bz2  astropy__astropy-13236#pass_to_pass.bz2  astropy__astropy-13398#fail_to_pass.bz2  astropy__astropy-13398#pass_to_pass.bz2  astropy__astropy-13453#fail_to_pass.bz2  astropy__astropy-13453#pass_to_pass.bz2  astropy__astropy-13579#fail_to_pass.bz2  astropy__astropy-13579#pass_to_pass.bz2  astropy__astropy-13977#fail_to_pass.bz2  astropy__astropy-13977#pass_to_pass.bz2  astropy__astropy-14096#fail_to_pass.bz2  astropy__astropy-14096#pass_to_pass.bz2  astropy__astropy-14182#fail_to_pass.bz2  astropy__astropy-14182#pass_to_pass.bz2  astropy__astropy-14309#fail_to_pass.bz2  astropy__astropy-14309#pass_to_pass.bz2  astropy__astropy-14365#fail_to_pass.bz2  astropy__astropy-14365#pass_to_pass.bz2  astropy__astropy-14369#fail_to_pass.bz2  astropy__astropy-14369#pass_to_pass.bz2  astropy__astropy-14508#fail_to_pass.bz2  astropy__astropy-14508#pass_to_pass.bz2  astropy__astropy-14539#fail_to_pass.bz2  astropy__astropy-14539#pass_to_pass.bz2  astropy__astropy-14598#fail_to_pass.bz2  astropy__astropy-14598#pass_to_pass.bz2  astropy__astropy-14995#fail_to_pass.bz2  astropy__astropy-14995#pass_to_pass.bz2  astropy__astropy-7166#fail_to_pass.bz2  astropy__astropy-7166#pass_to_pass.bz2  astropy__astropy-7336#fail_to_pass.bz2  astropy__astropy-7336#pass_to_pass.bz2  astropy__astropy-7606#fail_to_pass.bz2  astropy__astropy-7606#pass_to_pass.bz2  astropy__astropy-7671#fail_to_pass.bz2  astropy__astropy-7671#pass_to_pass.bz2  (+997 more)
commit0/harness/: build.py  constants.py  docker_build.py  docker_utils.py  dockerfiles.py  evaluate.py  execution_context.py  get_pytest_ids.py  lint.py  modal_utils.py  run_pytest_ids.py  save.py  setup.py  setup_dockers.py  setup_git_user.py  spec.py  utils.py
commit0/optional/: __init__.py
commit0/optional/agent/: README.md  __main__.py  agent_utils.py  cli.py  run_agent.py  run_agent_no_rich.py
configs/: log_parsers.py  reqs.yml  specs.yml
create-data/: README.md  build_dataset.py  inspect_unit_tests.py  repos.json  repos.yml  run_build_dataset.sh  run_pytest.py  run_unit_tests.py  scrape_pdf.py  serialize_repo.py  utils.py
data/: repos.yml
docs/: README.md  about.md  agent.md  analysis.md  api.md  baseline.md  distributed.md  extra.css  index.md  make_md.py  render_submissions.py  repos.md  setup.md  setupdist.md  setuplocal.md  table.md  update_submissions_dataset.py
docs/javascripts/: tablesort.js  tablesort.number.js
evaluation/SWE-bench/swebench/harness/: constants.py  log_parsers.py  utils.py
examples/star/: inference.py  run.sh  star.py  test.py  test.sh  train.py  utils.py
harness/: constants.py  docker_build.py  docker_utils.py  dockerfiles.py  run_container.py  spec.py
scripts/: test_evaluate.sh  test_model_output.sh
